[package]
name = "cyclo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
btleplug = { version = "0.10.5", features = ["serde"] }
tokio = { version = "1.28.1", features = ["full"] }
