[package]
name = "cyclo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
btleplug = { version = "0.10.5", features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
iced = { version = "0.9.0", features = ["tokio"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
uuid = "1.3.3"
